# plugify-module-dotnet

./: .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  README.md  README_ru.md  plugify-module-dotnet.json  plugify-module-dotnet.pmodule.in
.github/workflows/: cmake-multiple-platform.yml
cmake/: cpptrace.cmake
conda/: bld.bat  build.sh  meta.yaml.example
generator/: generator.py
managed/: Plugify.sln  README.md
managed/ExamplePlugin/: ExamplePlugin.csproj  Program.cs
managed/Plugify/: Arena.cs  AssemblyLoader.cs  Defer.cs  DelegateHelpers.cs  ExtensionMethods.cs  GarbageCollector.cs  InternalCalls.cs  InteropTypes.cs  JitCall.cs  JitCallback.cs  ManagedHost.cs  ManagedObject.cs  ManagedType.cs  Marshalling.cs  MethodUtils.cs  NativeExportAttribute.cs  NativeMethods.cs  Plugify.csproj  Plugin.cs  PluginLoadContext.cs  PluginLoadContextWrapper.cs  Scope.cs  TypeInterface.cs  TypeNotFoundException.cs  TypeUtils.cs  UniqueList.cs
managed/Plugify.Generators/: ImportsGenerator.cs  ManifestFileGenerator.cs  Plugify.Generators.csproj  Plugify.Generators.targets
managed/Plugify.Generators/Properties/: launchSettings.json
managed/TE/: TE.sln
managed/TE/TE/: Class1.cs  TE.csproj  s2sdk.cs
managed/TE/TE/Properties/PublishProfiles/: FolderProfile.pubxml
src/: attribute.cpp  attribute.hpp  core.hpp  field_info.cpp  field_info.hpp  gc.cpp  gc.hpp  host_instance.cpp  host_instance.hpp  managed_assembly.cpp  managed_assembly.h  managed_assembly.hpp  managed_functions.h  managed_functions.hpp  managed_guid.hpp  managed_object.cpp  managed_object.h  managed_object.hpp  managed_type.hpp  memory.cpp  memory.hpp  method_info.cpp  method_info.hpp  module.cpp  module.h  module.hpp  native_string.cpp  native_string.h  native_string.hpp  natives.cpp  pch.hpp  property_info.cpp  property_info.hpp  type.cpp  type.hpp  type_cache.cpp  type_cache.hpp  utils.cpp  utils.hpp
sym/: exported_symbols.lds  version_script.lds
test/cross_call_worker/: CallbackHolder.cs  ExportClass.cs  Program.cs  ReverseClass.cs  TestClass.cs  cross_call_worker.csproj  cross_call_worker.pplugin
test/cross_call_worker/imported/cross_call_master/: aliases.cs  core.cs  counter.cs  delegates.cs  enums.cs  resource.cs
test/cross_call_worker/pps/: cross_call_master.cs
test/example_plugin/: .gitignore  Program.cs  example_plugin.csproj  example_plugin.pplugin
test/example_plugin/imported/cross_call_worker/: aliases.cs  core.cs  delegates.cs  enums.cs
